# kasflow-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
kasflow/: handler.py  main.py
kasflow/bots/: poller_bot.py
notebooks/: expense-extractor.ipynb  graphs.ipynb  message-intention.ipynb  record-extractor.ipynb  recorder-graph.ipynb  trim-messages.ipynb  utils.py
src/kasflow/: conf.py  handler.py  handlers.py  llm.py  main.py  models.py  utils.py
src/kasflow/db/: models.py  repository.py  session.py
src/kasflow/db/migrations/: env.py
src/kasflow/db/migrations/versions/: 5bce3ea87022_create_expenses.py
src/kasflow/graphs/: __init__.py  base.py
src/kasflow/graphs/chat/: __init__.py  graph.py  models.py  prompt.md
src/kasflow/graphs/main/: __init__.py  graph.py  models.py  prompt.md
src/kasflow/graphs/recorder/: __init__.py  graph.py  models.py  prompt.md
src/kasflow/store/: __init__.py  aiosqlite.py  base.py  duckdb.py
src/kasflow/tools/: __init__.py  datetime.py  db.py
tests/kasflow/: models_test.py
tests/kasflow/store/: aiosqlite_test.py  duckdb_test.py  init_test.py
